fixing instruction message

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <br>
                 <div id="message"></div>
                 <br>
-                <h5>Press
-                    <strong>SPACE BAR</strong> to get started.</strong>
+                <h5 id="instruction">Press
+                    <strong>SPACE BAR</strong> to get started.
                 </h5>
                 <br>
                 <p>WINS :
