--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-lg-4">
                 <!-- winner actions picture and music -->
                 <div class="imagebox">
-                    <img id="itemimage" src="assets/images/animalcategory.jpg" alt="Category-Animal">
+                    <img id="itemimage" src="assets/images/animalcategory.jpg" alt="">
                 </div>
                 <div id="winner"></div>
             </div>
